# aws-vpc-flow-logs-visualizer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: container.yml
backend/: .env.example  inflection.py  pyproject.toml  uritemplate.py
backend/config/: settings.py  urls.py
backend/flows/: admin.py  advanced_filters.py  auth.py  models.py  parsers.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/flows/management/commands/: benchmark_ip_import.py
backend/flows/migrations/: 0001_initial.py  0002_networkgroup_cidrs_alter_networkgroup_cidr.py  0003_ipmetadata_account_owner_ipmetadata_asset_kind_and_more.py  0004_remove_correlatedflow_flows_corre_last_se_2e548f_idx_and_more.py
backend/templates/docs/: redoc.html  swagger-ui.html
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AppHeader.jsx  Icon.jsx
frontend/src/components/assets/: AssetTable.jsx  HierarchySidebar.jsx  MetadataEditorSidebar.jsx
frontend/src/components/logs/: RawFlowEntriesTable.jsx
frontend/src/components/workspace/: FiltersSidebar.jsx  FlowLogsTable.jsx  TopologyPanel.jsx
frontend/src/layouts/: AppLayout.jsx
frontend/src/lib/: api.js  auth.js  graph.js
frontend/src/pages/: AssetsPage.jsx  DashboardPage.jsx  FirewallSimulatorPage.jsx  LoginPage.jsx  LogsPage.jsx  SearchPage.jsx  SettingsPage.jsx  WorkspacePage.jsx
